--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -29,6 +29,32 @@ body {
 	max-width: 1024px;
 }
 
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color:    #fff;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color:    #fff;
+   opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color:    #fff;
+   opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color:    #fff;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   color:    #fff;
+}
+
+::placeholder { /* Most modern browsers support this now. */
+   color:    #fff;
+}
+
+
+
+
 #inputContainer {
 	width: 400px;
 	padding: 45px;
@@ -40,7 +66,9 @@ body {
 	text-align: center;
 }
 
-#inputContainer input[type='text'] {
+#inputContainer input[type='text'],
+#inputContainer input[type='password'],
+#inputContainer input[type='email'] {
 	display: block;
 	background-color: transparent;
 	border: 0px;
@@ -48,4 +76,12 @@ body {
 	height: 27px;
 	line-height: 27px;
 	width: 100%;
+}
+
+
+#inputContainer label {
+	color: #a0a0a0;
+	font-size: 18px;
+	margin-top: 15px;
+	
 }
