--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -82,6 +82,22 @@ body {
 #inputContainer label {
 	color: #a0a0a0;
 	font-size: 18px;
-	margin-top: 15px;
-	
+	margin-top: 15px;	
+}
+
+#inputContainer button {
+	background-color: transparent;
+	border: 1px solid #fff;
+	border-radius: 250px;
+	color: #fff;
+	font-size: 14px;
+	letter-spacing: 1px;
+	display: block;
+	margin: 20px auto;
+	height: 41px;
+	width: 100%;
+}
+
+#inputContainer button:hover {
+	cursor: pointer;
 }
