--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -101,3 +101,11 @@ body {
 #inputContainer button:hover {
 	cursor: pointer;
 }
+
+.hasAccountText span {
+	font-weight: bold;
+	font-size: 12px;
+}
+.hasAccountText {
+	text-align: center;
+}
