--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -105,6 +105,7 @@ body {
 .hasAccountText span {
 	font-weight: bold;
 	font-size: 12px;
+	cursor: pointer;
 }
 .hasAccountText {
 	text-align: center;
@@ -115,3 +116,28 @@ body {
 #loginForm {
 	display: none;
 }
+
+#loginText {
+	padding: 45px;
+	display: table-cell;
+}
+#loginText h1 {
+	color: #07d159;
+	font-size: 60px;
+	font-weight: bold;
+}
+
+#loginText h2 {
+	margin: 35px 0;
+}
+
+#loginText ul {
+	padding: 0px;
+}
+#loginText li {
+	font-size: 20px;
+	list-style-type: none;
+	padding: 20px 55px; 
+	background: url("../images/check.png") no-repeat 0 0;
+}
+
